# myro-cpp

./: CHANGELOG.txt  CMakeLists.txt  README-Cygwin.txt  README.txt  _config.yml  about.md  docs.md  download.md  faq.md  index.html  makefile  params.json
_includes/: head.html
_posts/: 2015-06-13-new-site.markdown
cmake/: myro-cpp-config.cmake  pkgconfig.cmake
doc/: index.md
doc/2.1.x/: _color_picture_8h_source.html  _filter_8h_source.html  _gray_picture_8h_source.html  _image_window_8h_source.html  _myro_8h_source.html  _picture_8h_source.html  _robot_8h_source.html  _scribbler_8h_source.html  _threaded_8h_source.html  _video_stream_8h_source.html  annotated.html  class_color_picture-members.html  class_color_picture.html  class_color_picture__coll__graph.map  class_color_picture__inherit__graph.md5  class_filter-members.html  class_filter.html  class_gray_picture-members.html  class_gray_picture.html  class_gray_picture__coll__graph.map  class_gray_picture__inherit__graph.md5  class_image_window-members.html  class_image_window.html  class_picture-members.html  class_picture.html  class_picture__inherit__graph.map  class_picture__inherit__graph.md5  class_robot-members.html  class_robot.html  class_scribbler-members.html  class_scribbler.html  class_scribbler__coll__graph.map  class_scribbler__coll__graph.md5  class_scribbler__inherit__graph.md5  class_threaded-members.html  class_threaded.html  class_threaded__inherit__graph.md5  class_video_stream-members.html  class_video_stream.html  class_video_stream__coll__graph.map  (+25 more)
doc/2.2.1/: _color_picture_8h_source.html  _filter_8h_source.html  _gray_picture_8h_source.html  _image_window_8h_source.html  _myro_8h.html  _myro_8h__incl.map  _myro_8h__incl.md5  _myro_8h_source.html  _myro_forward_dec_8h.html  _myro_forward_dec_8h__dep__incl.map  _myro_forward_dec_8h_source.html  _myro_i_o_8h.html  _myro_i_o_8h_source.html  _myro_internals_8h_source.html  _picture_8h_source.html  _robot_8h_source.html  _scribbler_8h_source.html  _video_stream_8h_source.html  annotated.html  class_color_picture-members.html  class_color_picture.html  class_color_picture__inherit__graph.map  class_color_picture__inherit__graph.md5  class_f_l_t_k_manager-members.html  class_f_l_t_k_manager.html  class_f_l_t_k_manager__coll__graph.map  class_f_l_t_k_thread-members.html  class_f_l_t_k_thread.html  class_f_l_t_k_thread__coll__graph.map  class_f_l_t_k_thread__inherit__graph.map  class_filter-members.html  class_filter.html  class_gray_picture-members.html  class_gray_picture.html  class_image_window-members.html  class_image_window.html  class_picture-members.html  class_picture.html  class_picture__inherit__graph.map  class_robot-members.html  (+52 more)
doc/2.2.2/: _color_picture_8h_source.html  _filter_8h_source.html  _gray_picture_8h_source.html  _image_window_8h_source.html  _myro_8h.html  _myro_8h__incl.map  _myro_8h_source.html  _myro_forward_dec_8h.html  _myro_forward_dec_8h__dep__incl.map  _myro_forward_dec_8h__dep__incl.md5  _myro_forward_dec_8h_source.html  _myro_i_o_8h.html  _myro_i_o_8h__incl.md5  _myro_i_o_8h_source.html  _myro_internals_8h_source.html  _picture_8h_source.html  _robot_8h_source.html  _scribbler_8h_source.html  _video_stream_8h_source.html  annotated.html  class_color_picture-members.html  class_color_picture.html  class_f_l_t_k_manager-members.html  class_f_l_t_k_manager.html  class_f_l_t_k_thread-members.html  class_f_l_t_k_thread.html  class_f_l_t_k_thread__inherit__graph.md5  class_filter-members.html  class_filter.html  class_gray_picture-members.html  class_gray_picture.html  class_image_window-members.html  class_image_window.html  class_picture-members.html  class_picture.html  class_picture__inherit__graph.map  class_picture__inherit__graph.md5  class_robot-members.html  class_robot.html  class_scribbler-members.html  (+41 more)
doc/2.2.x/: _color_picture_8h_source.html  _filter_8h_source.html  _gray_picture_8h_source.html  _image_window_8h_source.html  _myro_8h_source.html  _myro_forward_dec_8h.html  _myro_forward_dec_8h__dep__incl.map  _myro_forward_dec_8h__dep__incl.md5  _myro_forward_dec_8h_source.html  _myro_internals_8h_source.html  _picture_8h_source.html  _robot_8h_source.html  _scribbler_8h_source.html  _video_stream_8h_source.html  annotated.html  class_color_picture-members.html  class_color_picture.html  class_color_picture__coll__graph.map  class_f_l_t_k_manager-members.html  class_f_l_t_k_manager.html  class_f_l_t_k_manager__coll__graph.map  class_f_l_t_k_manager__coll__graph.md5  class_f_l_t_k_thread-members.html  class_f_l_t_k_thread.html  class_f_l_t_k_thread__coll__graph.map  class_f_l_t_k_thread__coll__graph.md5  class_f_l_t_k_thread__inherit__graph.map  class_filter-members.html  class_filter.html  class_gray_picture-members.html  class_gray_picture.html  class_gray_picture__coll__graph.md5  class_gray_picture__inherit__graph.map  class_image_window-members.html  class_image_window.html  class_picture-members.html  class_picture.html  class_robot-members.html  class_robot.html  class_robot__inherit__graph.map  (+38 more)
doc/2.3.0/: _filter_8h_source.html  _graphics_8h_source.html  _image_window_8h_source.html  _myro_8h.html  _myro_8h_source.html  _myro_c_img_8h_source.html  _myro_forward_dec_8h.html  _myro_forward_dec_8h_source.html  _myro_i_o_8h.html  (+139 more)
docs/: Doxyfile.in  mainpage.txt
headers/: CMakeLists.txt  ColorPicture.h  Filter.h  Graphics.h  GrayPicture.h  ImageWindow.h  Myro.h  MyroCImg.h  MyroForwardDec.h  MyroInternals.h  Picture.h  Robot.h  Scribbler.h  Threaded.h  VideoStream.h  jmemsrc.h  serial.h
jpeg/: CMakeLists.txt  jmorecfg.h
src/: CMakeLists.txt  ColorPicture.cpp  Filter.cpp  Graphics.cpp  GrayPicture.cpp  ImageWindow.cpp  Myro.cpp  MyroInternals.cpp  Picture.cpp  Robot.cpp  Scribbler.cpp  VideoStream.cpp  jmemsrc.c
test/: CMakeLists.txt  CMakelists.txt  Makefile  take_snapshot.cpp  test_blob.cpp  test_camera.cpp  test_camera_fourwindow.cpp  test_camera_nonblocking.cpp  test_ir.cpp  test_motor.cpp  video_stream.cpp
test/graphics/: CMakeLists.txt  circles.cpp  robot_joystick.cpp  robot_senses.cpp
(+1 files in other folders)
